--- a/materiweek.html
+++ b/materiweek.html
@@ -25,25 +25,25 @@
 
         <style>
             .bg-grafena {
-                background-color: #193a7f !important;
-                color: white !important;
+                background-color: #ffffff !important;
+                color: rgb(0, 0, 0) !important;
             }
 
             .bg-grafena .nav-link,
             .bg-grafena .navbar-brand {
-                color: white !important;
+                color: rgb(0, 0, 0) !important;
             }
 
             .bg-grafena .nav-link:hover {
-                color: #f0f0f0 !important;
+                color: #000000 !important;
             }
         </style>
 
     </head>
-    <body class="d-flex flex-column h-100 bg-light">
+    <body class="d-flex flex-column h-100 bg-secondary-subtle">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg bg-grafena py-3 navbar-dark">
+            <nav class="navbar navbar-expand-lg bg-grafena py-3 text-dark">
                 <div class="container px-5">
                     <a class="navbar-brand" href="index.html"><span class="fw-bolder">GRAFENA</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -128,24 +128,21 @@
             </section>
         </main>
         <!-- Footer-->
-        <footer class="text-light p-4 text-center position-relative bg-grafena">
+        <footer class="text-dark p-4 text-center position-relative bg-grafena">
             <div class="container d-flex flex-column align-items-center justify-content-center">
                 <!-- Teks -->
                 <p class="lead mb-3">Check Our Social Media!</p>
 
                 <!-- Ikon sosial media -->
                 <div class="d-flex justify-content-center fs-2 gap-4">
-                <a class="text-white" href="https://www.instagram.com/grafena.himatologika/">
+                <a class="text-dark" href="https://www.instagram.com/grafena.himatologika/">
                     <i class="bi bi-instagram"></i>
-                </a>
-                <a class="text-white" href="#!">
-                    <i class="bi bi-tiktok"></i>
                 </a>
                 </div>
             </div>
 
             <!-- Tombol ke atas -->
-            <a href="#" class="position-absolute end-0 bottom-0 pb-4 pe-3 text-white">
+            <a href="#" class="position-absolute end-0 bottom-0 pb-4 pe-3 text-dark">
                 <i class="bi bi-arrow-up-circle h1"></i>
             </a>
         </footer>
