--- a/index.html
+++ b/index.html
@@ -61,16 +61,25 @@
                 <!-- Logo di tengah -->
                 <div class="text-center">
                     <img 
-                        class="img-fluid w-50 w-md-75 my-3" 
+                        class="img-fluid w-75 w-md-75 my-3" 
                         src="images/logo grafena.png" 
                         alt="Logo Grafena">
 
                 </div>
 
                 <!-- Filosofi logo tetap rata kiri -->
-                <p class="deskripsi">
-                    Filosofi logo menggambarkan semangat pertumbuhan, inovasi, dan kolaborasi dalam mencetak insan Teknik Kimia Industri yang tangguh, adaptif, serta siap bersaing di era global.
+                <h1 class="text-center pb-2">Filosofi Logo Grafena</h1>
+                <p class="deskripsi" style="text-align: justify;">
+                    Logo ini adalah representasi visual dari perjalanan berani menuju pertumbuhan dan perubahan.
+                    <hr>
+                    <strong>1. Figur Manusia Abstrak:</strong>
+                    <p style="text-align: justify;">Melambangkan setiap peserta Grafena yang sedang bergerak maju dan berani mengambil langkah. Ini adalah simbol dari keberanian dan kemajuan personal.</p>
+                    <strong>2. Lengkungan Dinamis/Jejak:</strong>
+                    <p style="text-align: justify;">Menggambarkan jejak atau dampak yang diciptakan saat seseorang "mengukir perubahan." Ini menunjukkan bahwa setiap langkah maju akan membentuk dan mengubah sesuatu.</p>
+                    <strong>3. Warna Biru Tua (Navy Blue):</strong>
+                    <p style="text-align: justify;">Merefleksikan kekuatan internal, kepercayaan diri, dan keteguhan tujuan yang diperlukan untuk berani melangkah dan menciptakan perubahan.</p>
                 </p>
+
             </div>
 
             <!-- div kosong atau bisa dihapus -->
@@ -177,10 +186,10 @@
     <!-- Clue -->
     <section id="clue" class="my-5">
     <div class="container">
-        <div class="row text-center g-4">
+        <div class="row text-center g-4 justify-content-center align-items-center">
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card w-100 h-80">
-                    <img src="images/week2.png" class="card-img-top img-fluid" alt="...">
+                    <img src="images/tandatanya.jpeg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">WEEK 2</p>
                         <div class="d-flex gap-2">
@@ -188,7 +197,7 @@
                             <button class="btn btn-sm cek-detail-btn"
                                     data-bs-toggle="modal"
                                     data-bs-target="#detailModal"
-                                    data-img-src="images/week2.png">
+                                    data-img-src="images/tandatanya.jpeg">
                                     <span class="text-light">Cek Detail</span>
                             </button>
                             <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
@@ -199,14 +208,14 @@
             </div>
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card w-100 h-80">
-                    <img src="images/week3.png" class="card-img-top img-fluid" alt="...">
+                    <img src="images/tandatanya.jpeg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">WEEK 3</p>
                         <div class="d-flex gap-2">
                             <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
                                     data-bs-toggle="modal"
                                     data-bs-target="#detailModal"
-                                    data-img-src="images/week3.png">
+                                    data-img-src="images/tandatanya.jpeg">
                                     <span class="text-light">Cek Detail</span>
                             </button>
                             <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
@@ -223,7 +232,7 @@
                             <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
                                     data-bs-toggle="modal"
                                     data-bs-target="#detailModal"
-                                    data-img-src="images/week2.png">
+                                    data-img-src="images/tandatanya.jpeg">
                                     <span class="text-light">Cek Detail</span>
                             </button>
                             <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
@@ -240,24 +249,7 @@
                             <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
                                     data-bs-toggle="modal"
                                     data-bs-target="#detailModal"
-                                    data-img-src="images/week2.png">
-                                    <span class="text-light">Cek Detail</span>
-                            </button>
-                            <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-md-4 col-lg-2">
-                <div class="card w-100 h-80">
-                    <img src="images/tandatanya.jpeg" class="card-img-top img-fluid" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">WEEK 6</p>
-                        <div class="d-flex gap-2">
-                            <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
-                                    data-bs-toggle="modal"
-                                    data-bs-target="#detailModal"
-                                    data-img-src="images/week2.png">
+                                    data-img-src="images/tandatanya.jpeg">
                                     <span class="text-light">Cek Detail</span>
                             </button>
                             <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
@@ -294,6 +286,7 @@
     <div class="d-flex justify-content-center fs-2 gap-4">
       <a class="text-dark" href="https://www.instagram.com/grafena.himatologika/">
         <i class="bi bi-instagram"></i>
+        <i class="h-6 lead text-center">@grafena.himatologika</i>
       </a>
       <!-- <a class="text-dark" href="#!">
         <i class="bi bi-tiktok"></i>
