--- a/index.html
+++ b/index.html
@@ -189,19 +189,36 @@
         <div class="row text-center g-4 justify-content-center align-items-center">
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card w-100 h-80">
+                    <img src="images/clue1.jpg" class="card-img-top img-fluid" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">WEEK 1</p>
+                        <div class="d-flex gap-2">
+                            <div class="d-flex gap-2">
+                            <button class="btn btn-sm cek-detail-btn"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#detailModal"
+                                    data-img-src="images/clue1.jpg">
+                                    <span class="text-light">Cek Detail</span>
+                            </button>
+                            <button class="btn btn-sm"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeCBtEkMhZWDv2bGlUDuia4czSeUC2l_DmZhxQwfp03XPQb4A/viewform?usp=sharing&ouid=111484586924040093979"><span class="text-light">Submit</span></a></button>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card w-100 h-80">
                     <img src="images/tandatanya.jpeg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">WEEK 2</p>
                         <div class="d-flex gap-2">
-                            <div class="d-flex gap-2">
-                            <button class="btn btn-sm cek-detail-btn"
+                            <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
                                     data-bs-toggle="modal"
                                     data-bs-target="#detailModal"
                                     data-img-src="images/tandatanya.jpeg">
                                     <span class="text-light">Cek Detail</span>
                             </button>
                             <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
-                        </div>
                         </div>
                     </div>
                 </div>
@@ -228,23 +245,6 @@
                     <img src="images/tandatanya.jpeg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">WEEK 4</p>
-                        <div class="d-flex gap-2">
-                            <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
-                                    data-bs-toggle="modal"
-                                    data-bs-target="#detailModal"
-                                    data-img-src="images/tandatanya.jpeg">
-                                    <span class="text-light">Cek Detail</span>
-                            </button>
-                            <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-md-4 col-lg-2">
-                <div class="card w-100 h-80">
-                    <img src="images/tandatanya.jpeg" class="card-img-top img-fluid" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">WEEK 5</p>
                         <div class="d-flex gap-2">
                             <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
                                     data-bs-toggle="modal"
