--- a/index.html
+++ b/index.html
@@ -208,31 +208,14 @@
             </div>
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card w-100 h-80">
-                    <img src="images/tandatanya.jpeg" class="card-img-top img-fluid" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">WEEK 2</p>
-                        <div class="d-flex gap-2">
-                            <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
-                                    data-bs-toggle="modal"
-                                    data-bs-target="#detailModal"
-                                    data-img-src="images/tandatanya.jpeg">
-                                    <span class="text-light">Cek Detail</span>
-                            </button>
-                            <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-md-4 col-lg-2">
-                <div class="card w-100 h-80">
-                    <img src="images/tandatanya.jpeg" class="card-img-top img-fluid" alt="...">
+                    <img src="images/clue3.png" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">WEEK 3</p>
                         <div class="d-flex gap-2">
                             <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
                                     data-bs-toggle="modal"
                                     data-bs-target="#detailModal"
-                                    data-img-src="images/tandatanya.jpeg">
+                                    data-img-src="images/clue3.png">
                                     <span class="text-light">Cek Detail</span>
                             </button>
                             <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
@@ -245,6 +228,23 @@
                     <img src="images/tandatanya.jpeg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">WEEK 4</p>
+                        <div class="d-flex gap-2">
+                            <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#detailModal"
+                                    data-img-src="images/tandatanya.jpeg">
+                                    <span class="text-light">Cek Detail</span>
+                            </button>
+                            <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card w-100 h-80">
+                    <img src="images/tandatanya.jpeg" class="card-img-top img-fluid" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">WEEK 5</p>
                         <div class="d-flex gap-2">
                             <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
                                     data-bs-toggle="modal"
@@ -337,3 +337,4 @@
     
 </body>
 </html>
+
