--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                     data-img-src="images/clue3.png">
                                     <span class="text-light">Cek Detail</span>
                             </button>
-                            <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
+                            <button class="btn btn-sm"><a href="https://forms.gle/D9M6iW9v9zeJ1ze8A"><span class="text-light">Submit</span></a></button>
                         </div>
                     </div>
                 </div>
@@ -337,4 +337,5 @@
     
 </body>
 </html>
+
 
