--- a/index.html
+++ b/index.html
@@ -225,17 +225,17 @@
             </div>
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card w-100 h-80">
-                    <img src="images/tandatanya.jpeg" class="card-img-top img-fluid" alt="...">
+                    <img src="images/week_4.jpg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">WEEK 4</p>
                         <div class="d-flex gap-2">
                             <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
                                     data-bs-toggle="modal"
                                     data-bs-target="#detailModal"
-                                    data-img-src="images/tandatanya.jpeg">
+                                    data-img-src="images/week_4.jpg">
                                     <span class="text-light">Cek Detail</span>
                             </button>
-                            <button class="btn btn-sm"><a href=""><span class="text-light">Submit</span></a></button>
+                            <button class="btn btn-sm"><a href="https://forms.gle/NVtSARAjZQD24o1e7"><span class="text-light">Submit</span></a></button>
                         </div>
                     </div>
                 </div>
@@ -337,5 +337,6 @@
     
 </body>
 </html>
+
 
 
