--- a/index.html
+++ b/index.html
@@ -242,14 +242,14 @@
             </div>
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card w-100 h-80">
-                    <img src="week_5.png" class="card-img-top img-fluid" alt="...">
+                    <img src="images/week_5.png" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">WEEK 5</p>
                         <div class="d-flex gap-2">
                             <button class="btn btn-sm"><span class="text-lightcek-detail-btn"
                                     data-bs-toggle="modal"
                                     data-bs-target="#detailModal"
-                                    data-img-src="week_5.png">
+                                    data-img-src="images/week_5.png">
                                     <span class="text-light">Cek Detail</span>
                             </button>
                             <button class="btn btn-sm"><a href="https://forms.gle/bVwCUks4VkqJjSY36"><span class="text-light">Submit</span></a></button>
@@ -337,6 +337,7 @@
     
 </body>
 </html>
+
 
 
 
