--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                     data-img-src="images/week_5.png">
                                     <span class="text-light">Cek Detail</span>
                             </button>
-                            <button class="btn btn-sm"><a href="https://forms.gle/bVwCUks4VkqJjSY36"><span class="text-light">Submit</span></a></button>
+                            <button class="btn btn-sm"><a href="https://forms.gle/M6JgLeGLvsZ9KA3v8"><span class="text-light">Submit</span></a></button>
                         </div>
                     </div>
                 </div>
@@ -337,6 +337,7 @@
     
 </body>
 </html>
+
 
 
 
